@@ -1,2 +1,2 @@
-For 0.60: Change internal calls from device names to numbers.
-For 0.80: Implement Mixing Sets
+For 0.90: Implement Mixing Sets
+
